feat: added mongo container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  node-api:
+  api.bytebank:
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,3 +12,12 @@ services:
     environment:
       NODE_ENV: development
     restart: always
+  db.bytebank:
+    image: mongo:6.0
+    container_name: db.bytebank
+    restart: always
+    ports:
+      - "27018:27018"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
