refactor: refactoring api to typescript and adding extract model, controllers and routes

--- a/src/docs/card.docs.yaml
+++ b/src/docs/card.docs.yaml
@@ -48,7 +48,7 @@ paths:
         schema:
           type: string
         description: ID único do cartão.
-    get:
+    put:
       tags:
         - Cards
       summary: Busca um cartão específico por ID
