--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-api-project",
   "version": "1.0.0",
   "description": "A Node.js API project with GET, PUT, and DELETE endpoints and Swagger documentation.",
-  "main": "src/app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build",
     "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts"
   },
