--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node.js API project with GET, PUT, and DELETE endpoints and Swagger documentation.",
   "main": "src/app.ts",
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsc",
     "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts"
   },
