--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./src:/app/src
+      - .:/app
+      - /app/node_modules
     environment:
       NODE_ENV: development
-    restart: always 
+    restart: always
